Cleaning up files

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/normalize.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/demo.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/pieces.css" />
-    <title>CODER</title>
+    <title>iNavneeth</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
